- PR#6237: explicit "infer" tag to control or disable menhir --infer
  (Hugo Heuzard)
- PR#6625: pass -linkpkg to files built with -output-obj.
  (Peter Zotov)
- PR#6702: explicit "linkpkg" and "dontlink(foo)" flags
  (Peter Zotov, Gabriel Scherer)
- PR#6712: Ignore common VCS directories
  (Peter Zotov)
- PR#6720: pass -g to C compilers when tag 'debug' is set
  (Peter Zotov, Gabriel Scherer)

Libraries:
- PR#6781: Add higher baud rates to Unix termios
  (Damien Doligez, report by Berke Durak)

Tools:
- PR#6641: add -g, -ocamlcflags, -ocamloptflags options to ocamlmklib
  (Peter Zotov)
- GPR#139: more versatile specification of locations of .annot

Runtime:
- PR#6675: GC hooks
  (Damien Doligez and Roshan James)

Bug fixes:
- PR#5271: Location.prerr_warning is hard-coded to use Format.err_formatter
  (Damien Doligez, report by Rolf Rolles)
- PR#5836, PR#6684: printing lazy values in ocamldebug may segfault
  (Gabriel Scherer)
- PR#6573: extern "C" for systhreads/threads.h
  (Mickaël Delahaye)
- PR#6607: The manual doesn't mention 0x200 flag for OCAMLRUNPARAM=v
  (Alain Frisch)
- PR#6616: allow meaningful use of -use-runtime without -custom.
  (Peter Zotov)
- PR#6628: Configure script rejects legitimate arguments
  (Michael Grünewald, Damien Doligez)
- PR#6640: ocamlbuild: wrong "unused tag" warning on "precious"
  (report by user 'william')
- PR#6665: Failure of tests/asmcomp on sparc
  (Stéphane Glondu)
- PR#6669: fix 4.02 regression in toplevel printing of lazy values
  (Leo White, review by Gabriel Scherer)
- PR#6680: Missing parens when printing polymorphic variant value in warning
- PR#6690: Uncaught exception (Not_found) with (wrong) wildcard or unification
           type variable in place of a local abstract type
- PR#6717: Pprintast does not print let-pattern attributes
  (Gabriel Scherer, report by Peter Zotov)
- PR#6727: Printf.sprintf "%F" misbehavior
  (Benoît Vaugon, report by Vassili Karpov)
- PR#6749: ocamlopt returns n for (n mod 1) instead of 0