@@ -22,6 +22,8 @@ OCamlbuild:
   (Peter Zotov)
 - PR#6720: pass -g to C compilers when tag 'debug' is set
   (Peter Zotov, Gabriel Scherer)
+- PR#6794: pass package-specific include flags when building C files
+  (Jérémie Dimino, request by Peter Zotov)
 
 Libraries:
 - PR#6781: Add higher baud rates to Unix termios
